--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
 
-    <h3>Les ingrédients</h3>
+    <h3 style="color: #9D7B35">Les ingrédients</h3>
     <hr>
     <div id="ingredients">
         <div>
@@ -82,7 +82,7 @@
         <blockquote>Pour que la recette soit encore plus belle et bien meilleure, ajouter une dose de karaoké tout droit sortie du METROPOLE</blockquote>
         <img src="assets/closequote" alt="close" id="closequote">
     </div>
-    <img src="assets/pellicule.png" height="142" width="446"/>
+    <img src="assets/pellicule.png" id="pellicule"/>
 
 <h3>Avis sur la recette</h3>
 
